Change project name in landing.ejs comments
Updated project description in comments.

--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -3,8 +3,7 @@
 <!-- | | | || -_|| ||  _|| . ||     || -_|    |  _|| . |    | | | ||     |  | |   -->
 <!-- |_____||___||_||___||___||_|_|_||___|    |_|  |___|    |_|_|_||__|__|  |_|   -->
 
-<!-- MAT: My Amazon Tracker  made by Manish Raj -->
-<!-- This is an Amazon price tracker for my CS50 final project -->
+<!-- MAT: My Application Transfer   made by Manish Raj -->
 
 <!DOCTYPE html>
 <html lang="en" >
